# pr-autopilot

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: nightly-agent.yml
docs/: label-stats.json
docs/adr/: README.md
scripts/: nightly_agent.py
src/prautopilot/: __init__.py  cli.py
src/prautopilot/commands/: generate.py  hook.py  label.py  review.py
src/prautopilot/core/: config.py  diff.py  generator.py  github.py  labels.py  reviewers.py
tests/: test_config.py  test_diff.py  test_labels.py
