[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-autopilot"
version = "0.1.0"
description = "CLI that auto-generates PR descriptions, reviewers, and labels from your diff using AI"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Brian Pelow", email = "brianpelow@github" }]
keywords = ["cli", "github", "pull-request", "ai", "fintech", "devops"]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "anthropic>=0.28.0",
    "gitpython>=3.1.43",
    "pyyaml>=6.0.1",
]

[project.scripts]
pr-autopilot = "prautopilot.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prautopilot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]